--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: rgb(128, 0, 85);
+    background-color:#B91450;
 }
 
 .container{
@@ -14,10 +14,38 @@ body{
     margin: auto;
 }
 
+
 .form{
+    padding: 20px;
     border-radius: 10px;
     margin: 100px auto;
     background-color: white;
+}
+
+.form h3{
+    color: #B91450;
+    margin-bottom: 15px;
+}
+
+.form input , .round{
+    border: 2px solid #B91450;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.form button{
+    padding: 5px;
+    border: 2px grey solid;
+    border-radius: 5px;
+    color: #B91450;
+    font-size: 17px;
+    font-weight: bold;
+    background-color: #CCCCCC;
+}
+
+.form button:hover{
+    cursor: pointer;
+    border: 2px goldenrod solid;
 }
 
 .row{
@@ -25,9 +53,18 @@ body{
     justify-content: space-around;
 }
 
+.ticket-info .row{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
 .bottom-row{
     display: flex;
     justify-content: center;
+    padding: 20px;
+    margin-top: 20px;
 }
 
 .form button{
@@ -35,5 +72,29 @@ body{
 }
 
 .ticket-info{
+    padding: 20px;
+    margin-top: 100px;
     background-color: white;
+    border-radius: 5px;
+    min-height: 300px;
+}
+
+.h-20{
+    width: 100%;
+    height: 20px;
+}
+
+
+.bottom-name{
+    background-color: grey;
+}
+
+.bottom-name , .discount , .carriage , .cp-code , .ticket-price{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.ticket-info h3{
+    padding-bottom: 50px;
 }
