--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body{
     background-color:#B91450;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .container{
@@ -18,8 +19,9 @@ body{
 .form{
     padding: 20px;
     border-radius: 10px;
-    margin: 100px auto;
+    margin: 30px auto;
     background-color: white;
+    box-shadow: 0 0 25px #333333;
 }
 
 .form h3{
@@ -73,10 +75,11 @@ body{
 
 .ticket-info{
     padding: 20px;
-    margin-top: 100px;
+    margin-top: 30px;
     background-color: white;
     border-radius: 5px;
-    min-height: 300px;
+    min-height: 250px;
+    box-shadow: 0 0 25px #333333;
 }
 
 .h-20{
@@ -87,6 +90,8 @@ body{
 
 .bottom-name{
     background-color: grey;
+    padding: 15px;
+    font-weight: bolder;
 }
 
 .bottom-name , .discount , .carriage , .cp-code , .ticket-price{
@@ -97,4 +102,11 @@ body{
 
 .ticket-info h3{
     padding-bottom: 50px;
+}
+
+.title{
+    color:white;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 20px;
 }
